Initial commit with sources

--- a/package.json
+++ b/package.json
@@ -3,14 +3,39 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.20",
+    "@fortawesome/free-regular-svg-icons": "^5.10.1",
+    "@fortawesome/free-solid-svg-icons": "^5.10.0",
+    "@fortawesome/react-fontawesome": "^0.1.4",
+    "@types/classnames": "^2.2.9",
     "@types/jest": "24.0.16",
     "@types/node": "12.6.9",
     "@types/react": "16.8.24",
     "@types/react-dom": "16.8.5",
+    "@types/react-redux": "^7.1.1",
+    "@types/react-transition-group": "^4.2.3",
+    "@types/styled-components": "^4.1.19",
+    "@types/uniqid": "^4.1.3",
+    "apollo-boost": "^0.4.3",
+    "bootstrap": "^4.3.1",
+    "classnames": "^2.2.6",
+    "graphql": "^14.4.2",
+    "graphql-tag": "^2.10.1",
     "react": "^16.8.6",
+    "react-bootstrap": "^1.0.0-beta.10",
     "react-dom": "^16.8.6",
+    "react-horizontal-scrolling-menu": "^0.7.3",
+    "react-redux": "^7.1.0",
     "react-scripts": "3.0.1",
-    "typescript": "3.5.3"
+    "react-simple-tree-menu": "^1.1.4",
+    "redux": "^4.0.4",
+    "redux-saga": "^1.0.5",
+    "redux-saga-thunk": "^0.7.3",
+    "reselect": "^4.0.0",
+    "styled-components": "^4.3.2",
+    "typescript": "3.5.3",
+    "underscore": "^1.9.1",
+    "uniqid": "^5.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
