--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "redux-saga-thunk": "^0.7.3",
     "reselect": "^4.0.0",
     "styled-components": "^4.3.2",
-    "typescript": "3.5.3",
+    "typescript": "3.7.2",
     "underscore": "^1.9.1",
     "uniqid": "^5.0.3"
   },
@@ -57,5 +57,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-optional-chaining": "^7.6.0"
   }
 }
